Actualiza el contacto

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     
 </body>
-    <script src="app.js"></script>
+    <h1>Correo: ellen@alura.com</h1>
+        <p>Instructora</p>
 </html>
